--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mui/material": "^6.1.10",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
